done: sudokuSolver naked singles apply